--- a/packages/theme/panel.scss
+++ b/packages/theme/panel.scss
@@ -1,65 +1,100 @@
-.bpmn-panel {
+.bpmn-panel-wrapper {
   display: flex;
   width: 480px;
-  height: 100%;
-  box-sizing: border-box;
-  padding: 0 8px;
-  border-left: 1px solid #eee;
-  box-shadow: 0 0 8px #ccc;
-  flex-direction: column;
-  overflow: hidden;
-  .n-collapse .el-collapse-item {
-    border-top: none;
-    margin: 0;
-    border-bottom: 1px solid var(--n-divider-color);
-    &:first-child {
-      border-top: 1px solid var(--n-divider-color);
-    }
+  background-color: #fff;
+  color: #788188;
+  position: relative;
+  transition: width .3s;
 
-    .el-collapse-item__header {
-      padding: 16px 0;
-    }
-
-    .el-collapse-item__content-wrapper .el-collapse-item__content-inner {
-      padding:  0 0 16px 0;
-    }
-  }
-
-  .inline-large-button {
-    margin-top: 16px;
-    width: 100%;
-  }
-
-  .panel-header {
-    display: grid;
-    padding: 8px;
-    grid-template-columns: 40px auto;
-    grid-template-rows: 1fr 1fr;
-    grid-column-gap: 16px;
-    align-items: center;
-    background: #f5f5f7;
-    .bpmn-icon {
-      width: 40px;
-      height: 40px;
-      grid-row-start: 1;
-      grid-row-end: 3;
-    }
-    p {
+  .bpmn-panel {
+    display: flex;
+    width: 480px;
+    box-sizing: border-box;
+    padding: 0 8px;
+    border-left: 1px solid #eee;
+    box-shadow: 0 0 8px #ccc;
+    flex-direction: column;
+    overflow: hidden;
+    .n-collapse .el-collapse-item {
+      border-top: none;
       margin: 0;
-      padding: 0;
-      font-size: 14px;
-      font-weight: bolder;
+      border-bottom: 1px solid var(--n-divider-color);
+      &:first-child {
+        border-top: 1px solid var(--n-divider-color);
+      }
+
+      .el-collapse-item__header {
+        padding: 16px 0;
+      }
+
+      .el-collapse-item__content-wrapper .el-collapse-item__content-inner {
+        padding:  0 0 16px 0;
+      }
+    }
+
+    .inline-large-button {
+      margin-top: 16px;
+      width: 100%;
+    }
+
+    .panel-header {
+      display: grid;
+      padding: 8px;
+      grid-template-columns: 40px auto;
+      grid-template-rows: 1fr 1fr;
+      grid-column-gap: 16px;
+      align-items: center;
+      background: #f5f5f7;
+      .bpmn-icon {
+        width: 40px;
+        height: 40px;
+        grid-row-start: 1;
+        grid-row-end: 3;
+      }
+      p {
+        margin: 0;
+        padding: 0;
+        font-size: 14px;
+        font-weight: bolder;
+      }
+    }
+
+    .el-collapse {
+      flex: 1;
+      overflow-y: auto;
+    }
+
+    .need-filled {
+      &.el-form {
+        height: 520px;
+      }
     }
   }
 
-  .el-collapse {
-    flex: 1;
-    overflow-y: auto;
-  }
+  .bpmn-panel-tab {
+    position: absolute;
+    height: 50px;
+    width: 30px;
+    top: calc(50% - 25px);
+    left: -50px;
+    border-radius: 5px;
+    cursor: pointer;
+    border-right: 20px solid #dee1e2;
+    border-bottom: 9px solid transparent;
+    border-top: 9px solid transparent;
+    z-index: 3;
 
-  .need-filled {
-    &.el-form {
-      height: 520px;
+    .icon-wrapper {
+      position: absolute;
+      font-size: 20px;
+      left: 100%;
+      top: calc(50% - 12px);
     }
   }
 }
+
+.bpmn-panel-wrapper-hide {
+  width: 2px;
+}
+
+
